Redirect Kafka log output to stdout and stderr